# score_tabler

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt  env
src/: CMakeLists.txt  main.cc
src/util/: CMakeLists.txt  data.cc  data.hh  serialization.hh
